--- a/sass/index.html
+++ b/sass/index.html
@@ -10,7 +10,7 @@
     <header>
       <h1>Practice in Sass</h1>
     </header>
-    <div>
+    <div class="text-success">
       <ul>
         <li>ball</li>
         <li>dal</li>
@@ -18,7 +18,7 @@
         <li>smile</li>
       </ul>
     </div>
-    <div>
+    <div class="text-danger">
       <button>computer</button>
       <br />
       <button>disk</button>
@@ -28,7 +28,7 @@
       <button>usb</button>
       <br />
     </div>
-    <div>
+    <div class="text-warning">
       <h2>Neomi Oyerbach</h2>
     </div>
   </body>
